force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>Budget</label>
    <nameField>
        <displayFormat>BGT-{00000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>