force-app/main/default/objects/Budget__c/fields/Justification_for_access_charges__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_access_charges__c</fullName>
    <label>Justification for access charges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>