force-app/main/default/objects/Budget__c/fields/Justification_for_animal_costs_requested__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_animal_costs_requested__c</fullName>
    <label>Justification for animal costs requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>