force-app/main/default/objects/Budget__c/fields/Justification_for_miscellaneous_costs__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_miscellaneous_costs__c</fullName>
    <label>Justification for miscellaneous costs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>