force-app/main/default/objects/Budget__c/fields/Justification_for_Travel_Costs__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Travel_Costs__c</fullName>
    <label>Justification for Travel Costs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>