force-app/main/default/objects/Budget__c/fields/Materials_and_Consumables_Justification__c.field-meta.xml
<CustomField>
    <fullName>Materials_and_Consumables_Justification__c</fullName>
    <label>Materials and Consumables Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>