force-app/main/default/objects/Budget__c/fields/Salaries_for_PIs_Justification__c.field-meta.xml
<CustomField>
    <fullName>Salaries_for_PIs_Justification__c</fullName>
    <label>Salaries for PIs Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>