force-app/main/default/objects/Budget__c/fields/Support_staff_justification__c.field-meta.xml
<CustomField>
    <fullName>Support_staff_justification__c</fullName>
    <label>Support staff justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>